--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 jobs:
 
   build:
@@ -48,3 +51,18 @@ jobs:
       with:
         name: ZIP Build
         path: .\publish\
+
+    - name: Setup 7-Zip
+      uses: milliewalky/setup-7-zip@v1
+
+    - name: Archive published application
+      shell: cmd
+      run: 7z a build.zip .\publish\*
+  
+    - name: Release build artifact
+      uses: softprops/action-gh-release@v2
+      with:
+        files: build.zip
+        tag_name: artifact-build
+        token: ${{ secrets.GITHUB_TOKEN }}
+
